fixed text-align,fixed buttons

--- a/chatai/src/App.scss
+++ b/chatai/src/App.scss
@@ -223,6 +223,13 @@
         position: absolute;
         left: 49.8%;
       }
+      h6{
+        transition: all 0.5s ease-in-out;
+        color: #ffffff;
+        margin-bottom: 2.5rem;
+        position: absolute;
+        left: 55.5%;
+      }
 
       .response {
         width: 100%;
@@ -324,6 +331,11 @@
           left: 42.8%;
           font-size: 20px;
           letter-spacing: 1px;
+        }
+        h6{
+          left: 45.5%;
+          letter-spacing: 1px;
+
         }
         p {
           font-size: 15px;
